[package]
name = "list"
version = "0.1.0"
authors = ["Risto Autio <risto.autio@wunderdog.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.124"
deadpool-postgres = "0.5.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
config = "0.10.1"
derive_more = "0.99.2"
dotenv = "0.15.0"
env_logger = "0.8.3"
